--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /Lesson2/build/
 /Lesson04/nbproject/private/
 /Lesson04/build/
+/JavaApplication4/nbproject/private/
+/ChuaBTVN/nbproject/private/
+/ChuaBTVN/build/
+/Lesson5/nbproject/private/
+/Lesson5/build/
+/Lesson5/dist/
+/Lesson6Function/nbproject/private/
+/Lesson6Function/build/
