--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /Lesson5/dist/
 /Lesson6Function/nbproject/private/
 /Lesson6Function/build/
+/JavaApplication7/nbproject/private/
+/Lesson8/nbproject/private/
+/Lesson8/build/
